--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "lucide-react": "^0.402.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
