--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,12 @@
       "source": "/(.*)",
       "destination": "/"
     }
-  ]
+  ],
+  "builds": [
+    {
+      "src": "src/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [{ "src": "/(.*)", "dest": "/src/index.js" }]
 }
